# cbs-server-billing

./: .gitignore  README  README.md  billing.py  pyproject.toml  requirements.txt  setup.py
cbsserverbilling/: __init__.py  billing.py  dateutils.py  main.py  policy.py  records.py  spreadsheet.py  spreadsheet_pi.py  user_summary.py
cbsserverbilling/spreadsheet/: __init__.py  io.py  project.py  record.py  user.py
cbsserverbilling/templates/: cbs_server_bill.tex.jinja
tests/: test_billing.py
tests/resources/: kiwi_expected.tex  mock_pi_form.xlsx  mock_storage_update_form.xlsx  mock_user_form.xlsx  mock_user_update_form.xlsx
