[tool.poetry]
name = "cbsserverbilling"
version = "0.1.0"
description = ""
authors = ["Tristan Kuehn <tkuehn@uwo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
Jinja2 = "^3.1.2"
openpyxl = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.16.2"
pyright = "^1.1.296"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
